Fix overwrap problem in dictionary definition area.  Add minor styling.

--- a/css/style.css
+++ b/css/style.css
@@ -565,8 +565,10 @@ navbar-default .navbar-nav>li>a {
     }
     .right {
         position: relative;
-        height: calc(100% - 308px);
+        /*height: calc(100% - 308px);*/
+        height: calc(100% - 100px);
         top: 100px;
+        overflow: hidden;
         background: transparent;
     }
 
@@ -607,18 +609,20 @@ navbar-default .navbar-nav>li>a {
      }
 
     .right_middle {
-        position: relative;
-        width: 100%;
-        /*height: 57%;*/
+        /*max-height: 57%;*/
         border: 1px solid green;
         background: hsl(235, 14%, 74%);
         color: black;
         overflow: hidden;
         opacity: 0;
         transition: background, color, opacity 0.5s;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
+        /*border-top-left-radius: 20px;*/
+        /*border-top-right-radius: 20px;*/
 
+    }
+
+    .bluebg {
+        background: hsl(235, 14%, 74%);
     }
 
     .reducedHeight {
@@ -638,9 +642,14 @@ navbar-default .navbar-nav>li>a {
         color: white;
         opacity: 0;
         transition: opacity 0.5s;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
+        /*border-bottom-left-radius: 20px;*/
+        /*border-bottom-right-radius: 20px;*/
      }
+
+    .listDefCards {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
 
     .right_bottom:hover {
         background: hsla(46, 18%, 24%, 0.75);
@@ -676,9 +685,13 @@ navbar-default .navbar-nav>li>a {
     }
 
     .container_def_card {
-        display: flex;
-        flex-wrap: wrap;
+        /*height: 100%;*/
         overflow: auto;
+        height: calc(57% - 41.2px);
+        background: hsl(235, 14%, 74%);
+        opacity: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
 
     }
 
